Fixes nav spacing.

--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -9360,12 +9360,12 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 }
 
 .nav-secondary_item + .nav-secondary_item {
-  margin-top: 1px;
+  margin-top: 10px;
 }
 
 .nav-secondary_link {
   display: inline-block;
-  padding: 0.22222222em 0.55555556em;
+  padding: 0.27777778em 0.83333333em;
   border-left-style: solid;
   border-left-width: 5px;
   font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
