--- a/static/css/nav-secondary.less
+++ b/static/css/nav-secondary.less
@@ -140,7 +140,7 @@
 
         .respond-to-min(801px, {
             & + & {
-                margin-top: 1px;
+                margin-top: 10px;
             }
         });
     }
@@ -172,8 +172,8 @@
 
         .respond-to-min(801px, {
             display: inline-block;
-            padding: unit(4px / @font-size-large, em)
-                     unit(10px / @font-size-large, em);
+            padding: unit(5px / @font-size-large, em)
+                     unit(15px / @font-size-large, em);
             border-left-style: solid;
             border-left-width: 5px;
             .webfont-medium();
